@@ -1,3 +1,7 @@
+2013-07-24  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Use a distinct status string when redirecting from the RealURL
+
 2013-05-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Remove inclusion of old TYPO3 files. Rely on autoloader and compatibility layer now.
